# Github-Actions-Project

./: .env.example  .gitignore  README.md  SECURITY_CHECKLIST.md  pom.xml  pyproject.toml  sample-event.json.example
.github/workflows/: cicd-main.yml  investigate-failures.yml
pipeline_agent/: __init__.py  agent_investigator.py  audit_logger.py  config.py  email_notifier.py  github_client.py  investigate.py  investigator.py  issue_manager.py  logging_conf.py  main.py  openrouter_client.py  report_generator.py  safety.py  security.py
pipeline_agent/agent/: __init__.py  executor.py
pipeline_agent/llm/: __init__.py  openrouter.py  prompts.py
pipeline_agent/models/: __init__.py  audit_log.py  investigation_result.py
pipeline_agent/tools/: __init__.py  github_tools.py  langchain_tools.py  notifications.py  postgres_store.py  rate_limiter.py
pipeline_monitor/: __init__.py  audit_logger.py  email_notifier.py  github_client.py  investigate.py  investigator.py  issue_manager.py  main.py  openrouter_client.py  postgres_store.py  rate_limiter.py  report_generator.py  secrets_scanner.py
pipeline_monitor/agent/: __init__.py  executor.py
pipeline_monitor/llm/: __init__.py
pipeline_monitor/tools/: __init__.py  github_tools.py  langchain_tools.py
tests/: test_audit_logger.py  test_github_tools.py  test_investigate_failure.py  test_main.py  test_openrouter_llm.py  test_postgres_config.py  test_security.py
